--- a/bug-beatles/Password_generator/css/style.css
+++ b/bug-beatles/Password_generator/css/style.css
@@ -10,7 +10,7 @@
     --vb-cyan2: hsl(177, 92%, 70%);
     --dk-text: hsl(198, 20%, 13%);
 }
-
+/* let's do it */
 *{
     margin: 0;
     padding: 0;
